logs/Slang/generated/keywords/5.6.2--keyword_parameter.sv.log
name: keyword_parameter
description: The 'parameter' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_parameter.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_parameter.sv:8:8: error: expected declarator
    bit parameter;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_parameter.sv:8:18: error: expected declarator
    bit parameter;
                 ^
